--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">healthCareApplication</string>
+    <string name="app_name">testinggg</string>
+    <string name="home">Home</string>
+    <string name="search">Search</string>
+    <string name="calendar">Calendar</string>
+    <string name="profile">Profile</string>
+    <string name="search_hint">검색어를 입력하세요</string>
+    <string name="search_results_scrollview_description">Search results</string>
 </resources>
