--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">testinggg</string>
+    <string name="app_name">healthcareapplication</string>
     <string name="home">Home</string>
     <string name="search">Search</string>
     <string name="calendar">Calendar</string>
