--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,43 @@
     <string name="search_results_scrollview_description">Search results</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="release">
+        버전1.0
+    </string>
+    <string name="description">
+        회원 탈퇴\n
+            회원 탈퇴 시 사용자의 모든 개인 정보와 데이터는 영구적으로 삭제됩니다.\n
+            복구가 불가능하므로 탈퇴 전에 신중하게 결정해 주시기 바랍니다.\n
+        변경 및 해석\n
+            본 약관은 당사의 정책에 따라 변경될 수 있습니다.\n
+            약관의 변경사항은 사용자에게 사전 공지 없이 적용될 수 있습니다.\n\n
+            식단 기록과 관련된 정보\n
+            식단 기록 기능은 한국 식품의안전정보를 기반으로 합니다.\n
+            식품안전나라 API를 통해 제공되는 정보는 실제와 약간의 차이가 있을 수 있습니다.\n
+            사용자는 이 점을 유의하여 식단 기록을 확인하고 이용해야 합니다.\n
+
+         게시판 이용 약관\n\n
+            게시판 사용 목적\n
+            게시판은 사용자들이 식단, 운동 기록에 관련된 정보를 공유하고, 소통할 수 있는 공간입니다.\n
+            사용자는 게시판을 통해 다른 사용자와의 정보 교환, 질문과 답변, 도움 요청 등을 할 수 있습니다.\n\n
+            책임과 의무\n
+            사용자는 게시판을 이용함으로써 다음 사항을 준수해야 합니다:\n
+            - 다른 사용자의 개인정보나 비방, 욕설 등을 포함한 불법적인 내용을 게시하지 않습니다.\n
+            - 타인의 저작권을 침해하는 내용을 게시하지 않습니다.\n
+            - 허위 정보를 게시하거나, 부적절하거나 유해한 내용을 게시하지 않습니다.\n
+            - 사용자는 게시판에 공개된 정보를 신뢰하여 사용하는 것에 대한 책임을 집니다.\n\n
+            관리 및 제한 사항\n
+            - 운영자는 게시판에 게시된 내용을 모니터링하고, 위반 사항을 식별하여 적절히 처리할 수 있습니다.\n
+            - 운영자는 사전 통보 없이 게시물을 수정, 이동, 삭제할 권한을 가집니다.\n
+            - 운영자는 필요한 경우 사용자의 게시판 이용을 일시적 또는 영구적으로 제한할 수 있습니다.\n\n
+            저작권\n
+            사용자는 자신이 작성한 게시물에 대한 저작권을 보유합니다.\n
+            당사는 사용자가 제공한 게시물을 어플리케이션의 운영 및 홍보 목적으로 사용할 수 있습니다.\n\n
+            면책 조항\n
+            - 당사는 게시판을 통해 제공되는 정보의 정확성이나 완전성을 보장하지 않습니다.\n
+            - 사용자는 게시물을 신뢰하여 사용함으로써 발생하는 결과에 대해 당사는 책임을 지지 않습니다.\n\n
+            변경 및 해석\n
+            본 약관은 당사의 정책에 따라 변경될 수 있습니다.\n
+            약관의 변경사항은 사용자에게 사전 공지 없이 적용될 수 있습니다.
+    </string>
 </resources>
